# rollac

./: Cargo.toml  README.md
src/: behavior.rs  client.rs  error.rs  event.rs  main.rs  message.rs  model.rs  socket.rs  util.rs  world.rs  zone.rs
src/ac/: generic.rs  hare.rs  mod.rs  rabbit.rs
src/behavior/: fear.rs  mod.rs  move_.rs
src/tile/: mod.rs  world.rs  zone.rs
