[package]
name = "rollac"
version = "0.1.0"
authors = ["Bastien Sevajol <bastien.sevajol@algoo.fr>"]
edition = "2018"

[dependencies]
futures = "0.3.8"
websocket = "0.26.2"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"

[dependencies.async-std]
version = "1.8.0"
features = ["unstable"]
